fixing alignment

--- a/client/src/components/OnBoarding/Styles/SimpleOnBoarding.css
+++ b/client/src/components/OnBoarding/Styles/SimpleOnBoarding.css
@@ -9,6 +9,7 @@ div.ui.grid.pageHeader {
 
 div.onBoardingHeader {
   padding-bottom: 0 !important;
+  padding-top: 0 !important;
 }
 
 p.pageCounter {
